[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "litmus-link"
version = "0.1.0"
description = "RISC-V litmus generator for RVWMO, Vector, CMO, PBMT/NC, and TLB cross scenarios"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [{ name = "Litmus-link contributors" }]
dependencies = []

[project.scripts]
litmus-link = "litmus_link.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
