[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "litmus-link"
version = "0.1.0"
description = "RISC-V litmus generator for RVWMO, Vector, CMO, PBMT/NC, and TLB cross scenarios"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Litmus-link contributors" }]
dependencies = []

[project.scripts]
litmus-link = "cli:main"

[tool.setuptools]
py-modules = [
  "asm_check",
  "cli",
  "descriptions",
  "generator",
  "gui",
  "litmus_ir",
  "models",
  "profiles",
  "qt_gui",
  "renderer",
  "rule_file",
  "rules",
  "solver",
  "upstream",
  "validator",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
